# platformgen

./: .dockerignore  .env.example  .gitignore  ALPHA_READY.md  ALPHA_TESTING.md  Dockerfile  Dockerfile.genny-user  Dockerfile.test  FAQ.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  PLATFORMGEN.md  README.md  SETUP_SUMMARY.md  WHATS_NEXT.md  demo_auger.py  demo_auger_full.py  demo_auger_ui.html  demo_genny.py  demo_genny_full.py  demo_genny_ui.html  docker-compose.test.yml  docker-compose.yml  install.sh  pyproject.toml  requirements-web.txt  requirements.txt  setup.cfg
.github/: copilot-instructions.md
.github/copilot-chat/: install-auger.prompt.md
.github/workflows/: build-genny-user.yml  build-genny-web.yml
auger/: __init__.py  __main__.py  app.py  cli.py  config_manager.py
auger/data/: gchat_users.yaml  gchat_webhooks.yaml  prompts.yaml  widget_manifests.yaml
auger/data/origin/: AUGER_BEHAVIOR.md  conventions.yaml  rules.yaml
auger/integrations/: github_integration.py
auger/tools/: git_workflow.py  host_cmd.py  jira_auto_login.py  jira_session.py  servicenow_auto_login.py  servicenow_session.py  stakeholder_mention.py  widget_knowledge.py
auger/ui/: ask_auger.py  content_area.py  first_run.py  help_docs.py  hot_reload.py  icons.py  markdown_widget.py  status_bar.py  widget_manifest.py
auger/ui/widgets/: __init__.py  api_config.py  artifactory.py  cryptkeeper.py  cryptkeeper_lite.py  database.py  explorer.py  flux_config.py  gchat.py  github.py  help_viewer.py  host_tools.py  image_lab.py  index.mjs  jira.py  k8s_explorer.py  panner.py  pods.py  production_release.py  prompts.py  prospector.py  rcs_panels.py  servicenow.py  shell_terminal.py  story_to_prod.py  tasks.py
auger/ui/widgets/panner_resources/: ddog_assist_namespaces  ddog_assist_services  ddog_dockerfile_services
config/: gchat_users.yaml  prompts.yaml  rules.yaml
docs/: AUGER_ASK.md  AUGER_DISTRIBUTION_PLAN.md  DOCKER.md  PROJECT_SUMMARY.md  QUICKSTART.md  README_API_CONFIG.md  README_ARTIFACTORY.md  README_CONFLUENCE_API.md  README_CONFLUENCE_INTEGRATION.md  README_CONFLUENCE_WIDGET.md  README_CRYPTKEEPER.md  README_CRYPTKEEPER_LITE.md  README_DAG_DEPLOYMENT.md  README_DATABASE.md  README_EMOJI_ISSUE.md  README_EXPLORER.md  README_FLUX_CONFIG.md  README_GCHAT.md  README_GITHUB_WIDGET.md  README_HOST_TOOLS.md  README_IMAGE_LAB.md  README_JENKINS_COPIES.md  README_JIRA.md  README_PANNER_WIDGET.md  README_PODS.md  README_PRODUCTION_RELEASE.md  README_PROMPTS.md  README_PROSPECTOR_WIDGET.md  README_SERVICENOW.md  README_SHELL_TERMINAL.md  README_TASKS.md  VENV_SETUP.md
docs/origin/: BOOTSTRAP_PROMPT.md  README.md
docs/rollout/: ROLLOUT_BENEFITS.md  ROLLOUT_GSA_IT_BRIEF.md  ROLLOUT_ONBOARDING_GUIDE.md  ROLLOUT_PLAN.md  ROLLOUT_SECURITY_PRIVACY.md  ROLLOUT_USE_CASES.md
documentation/: fix-auger-launch-sigsegv-and-setup-hang.md
examples/: .env.example  config.yaml.example
genny/: __main__.py  app.py  cli.py  config_manager.py
genny/agents/: genny_runner.py
genny/data/: db_connections.yaml  gchat_users.yaml  gchat_webhooks.yaml  stakeholder_roles.yaml  widget_manifests.yaml
genny/data/origin/: BOOTSTRAP_PROMPT.md  GENNY_BEHAVIOR.md  conventions.yaml  rules.yaml  standards.yaml
genny/integrations/: datadog_integration.py
genny/tools/: cryptkeeper_lite.py  git_workflow.py  host_cmd.py  jenkins.py  jira_auto_login.py  jira_session.py  servicenow_auto_login.py  servicenow_session.py  stakeholder_mention.py  widget_knowledge.py
genny/ui/: ask_genny.py  content_area.py  first_run.py  help_docs.py  hot_reload.py  icons.py  status_bar.py  utils.py  widget_manifest.py
genny/ui/widgets/: __init__.py  api_config.py  artifactory.py  cryptkeeper.py  cryptkeeper_lite.py  database.py  explorer.py  flux_config.py  gchat.py  github.py  help_viewer.py  host_tools.py  image_lab.py  jira.py  k8s_explorer.py  panner.py  pods.py  production_release.py  prompts.py  prospector.py  rcs_panels.py  servicenow.py  shell_terminal.py  story_to_prod.py  tasks.py
genny/ui/widgets/panner_resources/: ddog_assist_clusters
genny/web/: app.py  widgets_api.py
k8s/jupyterhub/: .gitignore  deploy.sh  values.yaml
k8s/jupyterhub/templates/: fontconfig-fallback.conf  page.html  spawn_pending.html
k8s/rbac/: hub-genny-users-rbac.yaml
scripts/: auger-ask  auger-launch.sh  auger-setup.sh  auger_tray.py  docker-run.sh  docker-test.sh  entrypoint.sh  genny-ask  genny-cli.sh  genny-launch.sh  genny-setup.sh  genny_tray.py  host_tools_daemon.py  host_tools_daemon.sh  install-utilities.sh  install_wizard  install_wizard.py  recover_copilot_session.py  restart_ui.py  start-auger-tray.sh  start-genny-user.sh  startup_progress.py
web/: next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
