[metadata]
name = auger-platform
version = 0.1.0
description = AI-powered SRE platform with dynamic widgets and chat assistant
long_description = file: README.md
long_description_content_type = text/markdown
author = GSA ASSIST Team
author_email = assist@gsa.gov
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.31.0
    python-dotenv>=1.0.0
    pyyaml>=6.0.1
    click>=8.1.0
    tkterm>=0.0.0b2
    ujenkins>=0.11.1
    PyGithub>=1.59.0
    html2text>=2020.1.16
    pygments>=2.17.0

[options.packages.find]
where = .
include = auger*
exclude = tests*

[options.entry_points]
console_scripts =
    auger = auger.cli:cli_main
